src/www/admin/static/admin.css
/* ... */
table.list.multi tr:nth-child(even) {
    background: inherit;
}

table.list.multi tr:nth-child(4n+1), table.list.multi tr:nth-child(4n+2) {
    background: rgb(255, 174, 80);
    background: rgba(217, 134, 40, 0.2);
    background: rgba(var(--gSecondColor), 0.2);
}

table.list tr.checked {
    color: #633;
    background: #ffc;
}

table.list .error {
    color: red;
    font-weight: bold;
}

table.list .alert {
    color: darkred;
    font-weight: bold;
}

table.list .confirm {
    color: darkgreen;
}

table.list .num {
    text-align: center;
}

table.list .check {
    width: 1%;
}

table.search th {
    background: rgb(217, 134, 40);
    background: rgba(217, 134, 40, 0.5);
    background: rgba(var(--gSecondColor), 0.5);
}

.userOrder .cur {
    background: rgb(217, 134, 40);
    background: rgba(var(--gSecondColor), 1.0);
    color: #fff;
    color: rgb(var(--gBgColor));
}

.userOrder td, .userOrder th {
    position: relative;
}

.userOrder .icn {
    float: left;
    clear: left;
    color: #9c4f15;
    color: rgb(var(--gMainColor));
    text-decoration: none;
    font-size: 12pt;
    line-height: 6pt;
    width: 12pt;
    height: 8pt;
    vertical-align: middle;
    font-weight: normal;
    text-shadow: 0px 0px 1px #fff;
    text-shadow: 0px 0px 1px rgb(var(--gBgColor));
}

thead .icn:hover {
    color: darkred;
    text-shadow: none;
}

thead .cur.desc .icn.dn, thead .cur.asc .icn.up {
    color: #fff;
    text-shadow: none;
}

table.list .actions {
    text-align: right;
}

b.money {
    font-weight: inherit;
    white-space: pre;
}

#rapport h3 {
    text-align: center;
    margin-bottom: .5em;
}

#rapport table {
    width: 100%;
}

#rapport tr {
    vertical-align: top;
}

#rapport table table {
    border: 1px solid rgb(217, 134, 40);
    border-color: rgba(217, 134, 40, 0.5);
    border-color: rgba(var(--gSecondColor), 0.5);
}

#rapport table table tr th {
    width: 80%;
}

#rapport td, #rapport th {
    padding: 0.2em 0.5em;
    text-align: left;
}

#rapport td.money, #rapport th.money {
    text-align: right;
}

#rapport .compte th {
    font-weight: normal;
}

#rapport table table td {
    text-align: right;
}

#rapport .parent {
    font-weight: bold;
    background: rgb(247, 164, 70);
    background: rgba(217, 134, 40, 0.2);
    background: rgba(var(--gSecondColor), 0.2);
}

#rapport table table tfoot tr {
    background: rgb(247, 164, 70);
    background: rgba(217, 134, 40, 0.1);
    background: rgba(var(--gSecondColor), 0.1);
    color: rgb(156, 79, 21);
    color: rgb(var(--gMainColor));
}

#rapport .exercice {
    text-align: center;
    margin-bottom: .8em;
    padding-bottom: .5em;
    border-bottom: 1pt solid #999;
}

#rapport h1 {
    text-align: center;
}

.icn, .icnl {
    font-family: "gicon", sans-serif;
    font-style: normal;
    font-weight: normal;
    speak: none;
    font-variant: normal;
    text-transform: none;
    position: relative;
}

.actions .icn, .icn.action {
    text-decoration: none;
    border-radius: 1em;
    display: inline-block;
    text-align: center;
    font-size: 1.2em;
    line-height: .8em;
    vertical-align: middle;
    padding: .2em;
    font-family: "gicon", sans-serif;
    color: #9c4f15;
    color: rgb(var(--gMainColor));
    text-shadow: 1px 1px 1px #999;
    border: none;
    cursor: pointer;
    position: relative;
    z-index: 200;
}

.icn[title]:after {
    display: none;
    position: absolute;
    content: attr(title);
    font-size: 10pt;
    border-radius: .2em;
    top: 0;
    bottom: 0;
    right: 0;
    z-index: -1;
    padding: .3em .4em;
    padding-right: 2em;
    background: #ff9;
    text-shadow: none;
    white-space: pre;
    box-shadow: 0px 0px 2px #000;
    text-decoration: underline;
}

dl dd.actions .icn[title]:after {
    left: 2.2em;
    right: auto;
    z-index: 100000;
}

.icn[title]:hover:after {
    display: inline-block;
}

.num a {
    text-decoration: none;
    border-radius: .5em;
    display: inline-block;
    text-align: center;
    padding: 0 .2em;
    background: rgb(247, 164, 70);
    background: rgba(217, 134, 40, 0.5);
    background: rgba(var(--gMainColor), 0.5);
}

.actions .icn:hover, .num a:hover, .icn.action:hover {
    color: darkred;
    background: #ff9;
    z-index: 300;
}

.droits b {
    border: 2px solid #999;
    border-radius: 1em;
    color: #000;
    background: #ccc;
    width: 16px;
    display: inline-block;
    text-align: center;
    font-size: 0.8em;
    cursor: help;
    vertical-align: middle;
    position: relative;
    z-index: 10;
    font-family: "gicon", "Trebuchet MS", Arial, Helvetica, sans-serif;
}

.droits b.aucun {
    border-color: #ccc;
    background: #eee;
    color: #999;
}

.droits b.acces {
    border-color: #cc9;
    color: #660;
    background: #ffe;
}

.droits b.ecriture {
    border-color: #9c9;
    color: #060;
    background: #efe;
}

.droits b.aucun:before {
    content: "X";
    position: absolute;
    left: 0;
    right: 0;
    top: -3px;
    color: #ccc;
    z-index: -1;
    font-size: 1.5em;
    overflow: hidden;
}

.droits b.admin {
    color: #900;
    border-color: #c99;
    background: #fee;
}

.infos {
    margin-bottom: 1em;
}

.infos h3 {
    margin-bottom: 0.5em;
}

.infos p {
    margin-bottom: 0.8em;
}

.infos dl {
    margin-bottom: 0.8em;
}

.infos dl dd {
    margin: 0.2em 1em;
}

.shortFormRight {
    width: 30em;
    float: right;
    font-size: 80%;
    text-align: center;
    margin-left: 1em;
}

.shortFormLeft {
    font-size: 80%;
}

.shortFormLeft .special {
    display: none;
}

.shortFormRight p.submit {
    margin-top: -2em;
    float: right;
}

.memberList {
    clear: both;
}

.pagination {
    clear: both;
    list-style-type: none;
    padding: 0.4em 0;
    text-align: center;
}

.pagination li {
    display: inline-block;
    margin: 0 0.3em;
}

.pagination li.current {
    font-size: 1.3em;
}

.pagination li a {
    color: #000;
}

fieldset.memberMessage {
    max-width: 30em;
}
/* ... */

